--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -3,43 +3,20 @@
   font-weight: 600;
 }
 
-
-button {
-  border-radius: 8px;
-  padding: 0.6em;
-  min-width: 152px;
-  font-size: 1.2em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #f9f9f9;
-  cursor: pointer;
-  border: none;
-  letter-spacing: .1px;
-  transition: transform 1120ms ease, box-shadow 1120ms ease, filter 1120ms ease;
-  user-select: none;
-  -webkit-tap-highlight-color: transparent;
-  touch-action: manipulation;
-}
-
-/* hover (desktop) */
-@media (hover: hover) {
-  button:hover {
-    filter: brightness(0.8);
-  }
-}
-
-/* pressed (mouse down OR finger down) */
-button:active {
-  transform: translateY(1px) scale(0.997);
-  filter: brightness(0.9);
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #213547;
   color: rgba(255, 255, 255, 0.87);
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -48,4 +25,15 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+#Root {
+  width: 100%;
+  height: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
