buttons style changes

--- a/frontend/src/styles/routerButton.css
+++ b/frontend/src/styles/routerButton.css
@@ -8,10 +8,11 @@ button {
   cursor: pointer;
   border: none;
   letter-spacing: .1px;
-  transition: transform 1120ms ease, box-shadow 1120ms ease, filter 1120ms ease;
+  transition: transform 200ms ease, box-shadow 200ms ease, filter 200ms ease;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
   touch-action: manipulation;
+  white-space: nowrap;
 }
 
 /* hover (desktop) */
@@ -23,6 +24,6 @@ button {
 
 /* pressed (mouse down OR finger down) */
 button:active {
-  transform: translateY(1px) scale(0.997);
+  transform: translateY(1px) scale(0.99);
   filter: brightness(0.9);
 }
